Fixed hidden overflow on panel__2 .panel__inner so now user can scroll tables of data

--- a/app/src/css/app.scss
+++ b/app/src/css/app.scss
@@ -257,6 +257,10 @@ $gmb-loader-color: lighten($brand-grey, 30%);
 	bottom: 0;
 	height: 100%;
 	overflow: hidden;
+
+  .panel__inner {
+    overflow-y: auto;
+  }
 }
 
 .panel__inner {
